--- a/public/app.css
+++ b/public/app.css
@@ -10,6 +10,15 @@ body {
 	margin: 0;
 	overflow: hidden;
 }
+#countdown {
+	display: none;
+	font-size: 24px;
+	color: red;
+}
+.jumbotron, 
+.right {
+	background-color: rgba(213, 164, 87, 0.7);
+}
   * {
     box-sizing: border-box;
   }
