--- a/public/app.css
+++ b/public/app.css
@@ -1,9 +1,9 @@
 html,
 body {
-	font-family: Helvetica, sans-serif;
+	font-family: 'Courier New', Courier, monospace;
 	padding: 0;
 	margin: 0;
-	background: #1B1B1B;
+	background: whitesmoke;
 	color: white;
 	width: 100%;
 	height: 100%;
@@ -50,6 +50,7 @@ body {
     font-size: 18px;
     padding: 11px;
     border: 1px solid #ddd;
+	background-color: white;
   }
   
   /* Style the navigation menu inside the left column */
@@ -62,7 +63,7 @@ body {
   #myMenu li a {
     padding: 12px;
     text-decoration: none;
-    color: black;
+    color: white;
     display: block
   }
   
@@ -104,7 +105,10 @@ body {
 		width: 32px;
 	}
 }
-
+#startRecordingButton {
+	background-color: rgba(213, 164, 87, 0.7);
+	border: 1px;
+}
 .outer-container {
 	display: flex;
 	height: 100%;
