--- a/public/app.css
+++ b/public/app.css
@@ -262,7 +262,7 @@ fieldset.labeled-radio-buttons > legend {
 }
 
 fieldset.ui-section {
-	border: 2px solid gray;
+	border: 2px solid white;
 	border-radius: 8px;
 	background: rgba(30, 30, 30, 0.5);
 	padding: 1em;
@@ -270,8 +270,8 @@ fieldset.ui-section {
 	padding-bottom: 1.5em; /* to balance with the top which has the <legend> */
 }
 fieldset.ui-section > legend {
-	background-color: #1a1a1a;
-	color: #aaa;
+	background-color: rgba(213, 164, 87, 0.9);
+	color: white;
 	padding: 3px 6px;
 	border-radius: 2px;
 	font-size: 1.3em;
@@ -347,8 +347,8 @@ li {
 	width: 10em;
 	font-size: 14px;
 	font-weight: bold;
-	background-color: #434343;
-	background-image: linear-gradient(100% 100% 90deg, #515151, #7A7A7A);
+	background-color: rgba(213, 164, 87, 0.7);
+	background-image: linear-gradient(100% 100% 90deg, rgba(213, 164, 87, 0.7), #7A7A7A);
 	border: none;
 	border-radius: 4px;
 	box-shadow: inset 0 1px 2px rgba(255,255,255,0.2), 0 1px 0 #2D2D2D, 0 2px 0 #2D2D2D, 0 3px 0 #2C2C2C, 0 4px 0 #2A2A2A, 0 0 0 2px black, 0 4px 0 2px black, 0 0 0 3px #222, 0 4px 0 3px #222;
@@ -419,7 +419,7 @@ button:disabled .fill-cc-if-disabled {
 #no-notes-recorded-message,
 #loading-midi-devices-message,
 #no-midi-devices-message {
-	color: gray;
+	color: whitesmoke;
 }
 
 #name-or-message {
@@ -502,7 +502,7 @@ a {
 }
 
 .a11y-modal {
-	background: #111;
+	background: rgba(213, 164, 87, 0.7);
 	color: white;
 	/* Ensures modal's close button is accessible when viewport is narrow */
 	box-sizing: border-box;
